samples/_failures_safe/1761202274_212a08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4d9476d.c: In function ‘main’:
./samples/SAFE/__tmp_d4d9476d.c:163:5: error: expected identifier or ‘(’ at end of input
  163 |     uint8_t
      |     ^~~~~~~
./samples/SAFE/__tmp_d4d9476d.c:163:5: error: expected declaration or statement at end of input
